--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -5,20 +5,23 @@ Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: June 14, 2025
-Developed: June 03, 2025
-Tested: June 14, 2025:
+Updated: June 18, 2025
+Developed: June 3, 2025
+Tested: June 18, 2025:
     Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
     Passed on iPad tablet browsers in xx, xx, and xx
     Passed on iPhone mobile browsers in xx, xx, and xx
 *********************************************************************************
 -->
-
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta charset="utf-8">
-    <title>An Introduction</title>
+        <meta charset="utf-8">
+        <title>An Introduction</title>
+
+        <!-- LINK TO CSS FILE -->
+        <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -30,7 +33,7 @@ Tested: June 14, 2025:
         I wouldn't mind "Becky Roesch," smaller at the top left, and then my 
         nav links at the right. Please advise -->
 
-        <h1>Introduction</h1>
+        <h1>Still Learning, Always Growing</h1>
     </header>
 
     <nav>
