--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ Tested: June 18, 2025:
     </nav>
 
     <main>
-        <!-- HERO SECTION START -->
-        <!-- When you said "Add the Content for your Home Page," I took that to mean our copy, not our creative. If not, please advise.
-        Use this info for CSS later:
+        <!--    HERO SECTION START + CSS DETAILS FOR LATER
+        Use this info for styling later:
         H1      Name     Inter 700 (bold), 3.5rem, dark charcoal (#1a202c)
-        H2      Subtitle   Inter 500 (medium), 1.4rem, sapphire blue (#2980b9)
+        H2      Subtitle   Inter 500 (medium), 1.4rem, sapphire blue (#0369a1)
         H3      Welcome    Inter 600 (semi-bold), 1.2rem, dark gray (#2c3e50)
         H4      Body       Inter 400 (regular), 1.1rem, medium gray (#4a5568) 
-        -->
+       -->
+
         <h1 class="hero-name">Becky Roesch</h1>
         
         <p class="hero-subtitle">Learning Technologies Student</p>
@@ -61,6 +61,7 @@ Tested: June 18, 2025:
         <p>This website showcases my journey through the Learning Technologies and Design program at the University of Missouri. There I've developed expertise in researching learner needs, designing engaging online instruction, and using cutting-edge technologies like VR and game-based learning to create memorable training experiences. As someone who believes in meeting learners where they are and inspiring them to go farther, I've built this portfolio to demonstrate how my education has enhanced both my professional capabilities and personal approach to solving complex problems.</p>
 
         <p>Here you'll see how my background as a teacher-turned-marketer influences my project choices. You can explore artifacts that highlight my core competencies in instructional design and technology integration, and learn more about my philosophy of designing clear, practical solutions to solve problems and facilitate authentic learning. Whether you're a potential employer looking for someone to onboard and educate technology clients, or a fellow educator interested in learning design, this site offers insight into how I transform educational challenges into engaging, results-driven experiences that help people and organizations thrive.</p>
+        
         <!-- HERO SECTION END -->
     </main>
 
