Upload for:  Activity Four : Creating Navigation
v1, before live checks

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@ Tested: June 26, 2025:
 
         <!-- LINK TO CSS FILE -->
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
 
 
 </head>
@@ -32,8 +33,27 @@ Tested: June 26, 2025:
         </header>
 
         <nav>
-        <!-- navigation links will go here -->
-        </nav>
+         <div class="nav-container">
+
+            <!-- Logo floated left -->
+
+             <a href="index.html" class="nav-logo">
+                <img src= "content/BR_dk_slate_logo.png" alt="BR Logo" class="logo-icon">
+                Becky Roesch
+             </a>
+
+
+            <!-- Links on Right (Float) --> 
+
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#projects.html">Projects</a></li>
+                <li><a href="#reflection.html">Reflection</a></li>
+                <li><a href="#contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
         <main>
 
