--- a/roesch_template.html
+++ b/roesch_template.html
@@ -6,9 +6,9 @@ Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: June 18, 2025
+Updated: June 26, 2025
 Developed: June 14, 2025
-Tested: June 14, 2025:
+Tested: June 26, 2025:
     Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
     Passed on iPad tablet browsers in xx, xx, and xx
     Passed on iPhone mobile browsers in xx, xx, and xx
@@ -18,29 +18,49 @@ Tested: June 14, 2025:
 <html lang="en-US">
 <head>
         <meta charset="utf-8">
-        <title>Page Title</title>
+        <title>Template</title>
 
         <!-- LINK TO CSS FILE -->
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
 
 </head>
 
 <body>
 
+    <nav>
+         <div class="nav-container">
+
+            <!-- Logo floated left -->
+
+             <a href="roesch_template.html" class="nav-logo">
+                <img src= "content/BR_dk_slate_logo.png" alt="BR Logo" class="logo-icon">
+                Becky Roesch
+             </a>
+
+
+            <!-- Links on Right (Float) --> 
+
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#projects.html">Projects</a></li>
+                <li><a href="#reflection.html">Reflection</a></li>
+                <li><a href="#contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+
     <header>
     </header>
 
-    <nav>
-        <!-- navigation links will go here -->
-    </nav>
-
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-        <p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+        <p></p>
+        <p></p>
     </main>
 
      <footer>
-        <!-- slight variance among footer content for different display sizes -->
         
         © 2025 Becky Roesch | <a href="mailto:rmr677@umsystem.edu">Let's connect!</a><br>
         Built with HTML, CSS, and passion for learning technologies.
