--- a/index.html
+++ b/index.html
@@ -54,7 +54,17 @@ Tested: June 25, 2025:
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#projects.html">Projects</a></li>
+
+            <!-- Drop Down for Projects Page --> 
+                <li class="dropdown">
+                    <a href="#projects.html" class="dropdown-toggle">Projects</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#project1.html">Link 1</a></li>
+                        <li><a href="#project2.html">Link 2</a></li>
+                        <li><a href="#project3.html">Link 3</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="#reflection.html">Reflection</a></li>
                 <li><a href="#contact.html">Contact</a></li>
             </ul>
