--- a/roesch_template.html
+++ b/roesch_template.html
@@ -14,13 +14,13 @@ Tested: June 26, 2025:
     Passed on iPhone mobile browsers in xx, xx, and xx
 *********************************************************************************
 -->
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en-US">
 <head>
         <meta charset="utf-8">
-        <title>Template</title>
+        <title>An Introduction</title>
 
-        <!-- LINK TO CSS FILE -->
+        <!-- LINKS TO CSS FILES -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
 
@@ -44,7 +44,17 @@ Tested: June 26, 2025:
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#projects.html">Projects</a></li>
+
+            <!-- Drop Down for Projects Page --> 
+                <li class="dropdown">
+                    <a href="#projects.html" class="dropdown-toggle">Projects</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#project1.html">Link 1</a></li>
+                        <li><a href="#project2.html">Link 2</a></li>
+                        <li><a href="#project3.html">Link 3</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="#reflection.html">Reflection</a></li>
                 <li><a href="#contact.html">Contact</a></li>
             </ul>
