--- a/roesch_template.html
+++ b/roesch_template.html
@@ -14,7 +14,7 @@ Tested: June 26, 2025:
     Passed on iPhone mobile browsers in xx, xx, and xx
 *********************************************************************************
 -->
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
         <meta charset="utf-8">
