--- a/roesch_template.html
+++ b/roesch_template.html
@@ -65,7 +65,7 @@ Tested: June 29, 2025 - Passed validation
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="dropdown">
-                        <a href="projects.html">Projects</a>
+                        <a href="#projects.html">Projects</a>
                         <ul class="dropdown-submenu">
                             <li><a href="#link1">Link 1</a></li>
                             <li><a href="#link2">Link 2</a></li>
