--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Use: Introduction to the portfolio site iteself
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: June 29, 2025
+Updated: July 1, 2025
 Developed: June 14, 2025
 Tested: June 29, 2025 - Passed validation
     Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
@@ -17,6 +17,7 @@ Tested: June 29, 2025 - Passed validation
 <html lang="en-US">
 <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio Welcome</title>
 
         <!-- LINK TO CSS FILE -->
