--- a/roesch_template.html
+++ b/roesch_template.html
@@ -6,7 +6,7 @@ Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: June 29, 2025
+Updated: July 1, 2025
 Developed: June 14, 2025
 Tested: June 29, 2025 - Passed validation
     Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
@@ -18,7 +18,8 @@ Tested: June 29, 2025 - Passed validation
 <html lang="en-US">
 <head>
         <meta charset="utf-8">
-        <title>An Introduction</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Template</title>
 
         <!-- LINKS TO CSS FILES -->
         <link rel="stylesheet" href="style.css">
