Included Visual Inspection
for Tablet & Phone breakpoints
noted 2 visual issues in header updates

--- a/reflection.html
+++ b/reflection.html
@@ -1,5 +1,5 @@
 <!--
-*********************************************************************************
+***************************************************************************************************
 Title: Reflection Page
 Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
@@ -8,10 +8,11 @@ Course: IS_LT 7355 Web Design & Development
 Updated: July 2, 2025
 Developed: June 28, 2025
 Tested: July 2, 2025 - Passed validation
-    Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
-    Passed on iPad tablet browsers in Safari, xx, and xx
-    Passed on iPhone mobile browsers in Safari, xx, and xx
-*********************************************************************************
+Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
+Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
+Passed VI on iPhone mobile browsers in Safari; 
+    Firefox cut off logotype on left edge; Chrome had too small "Let's Connect" in landscape view.
+***************************************************************************************************
 -->
 <!DOCTYPE html>
 <html lang="en-US">
