--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!--
-*********************************************************************************
+***************************************************************************************************
 Title: About Page
 Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
@@ -7,11 +7,12 @@ School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
 Updated: July 2, 2025
 Developed: June 3, 2025
-Tested: June 29, 2025 - Passed validation
-    Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
-    Passed on iPad tablet browsers in xx, xx, and xx
-    Passed on iPhone mobile browsers in xx, xx, and xx
-*********************************************************************************
+Tested: July 2, 2025 - Passed validation
+Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
+Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
+Passed VI on iPhone mobile browsers in Safari; 
+    Firefox cut off logotype on left edge; Chrome had too small "Let's Connect" in landscape view.
+***************************************************************************************************
 -->
 <!DOCTYPE html>
 <html lang="en-US">
