--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
 Updated: July 3, 2025
 Developed: June 14, 2025
-Tested: July 3, 2025 - Passed validation
+Tested: July , 2025 - Passed validation
 Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
 Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
 Passed VI on iPhone mobile browsers in Safari; 
@@ -80,7 +80,7 @@ Passed VI on iPhone mobile browsers in Safari;
 
             <p>This website showcases my journey through the Learning Technologies and Design program at the University of Missouri. There I've developed expertise in researching learner needs, designing engaging online instruction, and using cutting-edge technologies like VR and game-based learning to create memorable training experiences. As someone who believes in meeting learners where they are and inspiring them to go farther, I've built this portfolio to demonstrate how my education has enhanced both my professional capabilities and personal approach to solving complex problems.</p>
 
-            <p>Here you'll see how my background as a teacher-turned-marketer influences my project choices. You can explore artifacts that highlight my core competencies in instructional design and technology integration, and learn more about my philosophy of designing clear, practical solutions to solve problems and facilitate authentic learning. Whether you're a potential employer looking for someone to onboard and educate technology clients, or a fellow educator interested in learning design, this site offers insight into how I transform educational challenges into engaging, results-driven experiences that help people and organizations thrive.</p>
+            <p>You'll see how my background as a teacher-turned-marketer influences my project choices. You can explore artifacts that highlight my core competencies in instructional design and technology integration, and learn more about my philosophy of designing clear, practical solutions to solve problems and facilitate authentic learning. Whether you're a potential employer looking for someone to onboard and educate technology clients, or a fellow educator interested in learning design, this site offers insight into how I transform educational challenges into engaging, results-driven experiences that help people and organizations thrive.</p>
         
         </section>
 
