--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ Passed VI on iPhone mobile browsers in Safari;
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio Welcome</title>
 
+        <!-- GOOGLE FONTS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Slab:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+
         <!-- LINK TO CSS FILE -->
 
         <link rel="stylesheet" href="style.css">
