--- a/roesch_template.html
+++ b/roesch_template.html
@@ -1,18 +1,19 @@
 <!--
-*********************************************************************************
+******************************************************************************************************
 CHANGE TO SUIT EACH WEB PAGE
 Title: [SOME NAME] Page
 Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 2, 2025
+Updated: July 6, 2025
 Developed: June 14, 2025
 Tested: July 2, 2025 - Passed validation
-    Passed on Mac desktop browsers in Safari, Firefox, and Chrome.
-    Passed on iPad tablet browsers in xx, xx, and xx
-    Passed on iPhone mobile browsers in xx, xx, and xx
-*********************************************************************************
+    Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
+    Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
+    Passed VI on iPhone mobile browsers in Safari; 
+        Firefox cut off logotype on left edge; Chrome had too small "Let's Connect" in landscape view.
+*******************************************************************************************************
 -->
 <!DOCTYPE html>
 <html lang="en-US">
@@ -20,10 +21,24 @@ Tested: July 2, 2025 - Passed validation
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Template</title>
+        
+        <!-- GOOGLE FONTS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Slab:wght@400;500;600;700&display=swap" rel="stylesheet" type="text/css">
 
-        <!-- LINKS TO CSS FILES -->
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="nav.css">
+        <!-- FAVICONS -->
+        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+
+
+        <!-- LINK TO CSS FILE -->
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="nav.css" type="text/css">
+
 
 </head>
 
@@ -66,9 +81,10 @@ Tested: July 2, 2025 - Passed validation
     </main>
 
     <footer>
-
-        © 2025 Becky Roesch | <a href="mailto:rmr677@umsystem.edu">Let's connect!</a><br>
-        Built with HTML, CSS, and passion for learning technologies.
+        Connect with Becky: 
+        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon-email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
+        <img src="content/phone_icon.png" alt="Phone" class="footer-icon footer-icon-phone">1+888-888-8888<br>
+        Built with HTML, CSS, & passion for learning technologies. | © 2025 RM Roesch
 
     </footer>
 
