--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Passed VI on iPhone mobile browsers in Safari;
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Slab:wght@400;500;600;700&display=swap" rel="stylesheet" type="text/css">
 
         <!-- FAVICONS -->
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
