--- a/roesch_template.html
+++ b/roesch_template.html
@@ -6,9 +6,9 @@ Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 6, 2025
+Updated: July 10, 2025
 Developed: June 14, 2025
-Tested: July 2, 2025 - Passed validation
+Tested: July 10, 2025 - Passed validation
     Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
     Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
     Passed VI on iPhone mobile browsers in Safari; 
@@ -82,10 +82,9 @@ Tested: July 2, 2025 - Passed validation
 
     <footer>
         Connect with Becky: 
-        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon-email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
-        <img src="content/phone_icon.png" alt="Phone" class="footer-icon footer-icon-phone">1+888-888-8888<br>
+        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
+        <img src="content/phone_icon.png" alt="Phone" class="footer-icon footer-icon phone">1+888-888-8888<br>
         Built with HTML, CSS, & passion for learning technologies. | © 2025 RM Roesch
-
     </footer>
 
 </body>
