--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ Use: Introduction to the portfolio site iteself
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 9, 2025
+Updated: July 10, 2025
 Developed: June 14, 2025
-Tested: July 9, 2025 - Passed validation
+Tested: July 10, 2025 - Passed validation
 Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
 Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
 Passed VI on iPhone mobile browsers in Safari; 
@@ -116,10 +116,10 @@ Passed VI on iPhone mobile browsers in Safari;
     </main>
 
     <footer>
-
-        © 2025 Becky Roesch | <a href="mailto:rmr677@umsystem.edu">Let's connect!</a><br>
-        Built with HTML, CSS, and passion for learning technologies.
-
+        Connect with Becky: 
+        <img src="content/email_icon.png" alt="Email" class="footer-icon footer-icon email"><a href="mailto:rmr677@umsystem.edu?subject=Let%27s%20connect%21">rmr677@umsystem.edu</a> | 
+        <img src="content/phone_icon.png" alt="Phone" class="footer-icon footer-icon phone">1+888-888-8888<br>
+        Built with HTML, CSS, & passion for learning technologies. | © 2025 RM Roesch
     </footer>
 
 </body>
