--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@ Passed VI on iPhone mobile browsers in Safari;
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="current">About</a></li>
                 <li class="dropdown">
-                    <a href="#projects.html">Projects</a>
-                        <ul class="mobileHide">
-                            <li><a href="#project1">Link 1</a></li>
-                            <li><a href="#project2">Link 2</a></li>
-                            <li><a href="#project3">Link 3</a></li>
-                        </ul>
-                </li>
+                <a href="projects.html">Projects</a>
+                <ul class="mobileHide">
+                    <li><a href="projects.html#goal1">Goal 1</a></li>
+                    <li><a href="projects.html#goal2">Goal 2</a></li>
+                    <li><a href="projects.html#goal3">Goal 3</a></li>
+                </ul>
+            </li>
                 <li><a href="reflection.html">Reflection</a></li>
                 <li><a href="#contact.html">Contact</a></li>
             </ul>
