--- a/reflection.html
+++ b/reflection.html
@@ -5,9 +5,9 @@ Use: Introduction to the portfolio's coder and author, Becky Roesch
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 10, 2025
+Updated: July 13, 2025
 Developed: June 28, 2025
-Tested: July 10, 2025 - Passed validation
+Tested: July 13, 2025 - Passed validation
 Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
 Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
 Passed VI on iPhone mobile browsers in Safari; 
@@ -59,12 +59,12 @@ Passed VI on iPhone mobile browsers in Safari;
         <ul class="navMenu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li class="dropdown">
-                <a href="#projects.html">Projects</a>
+           <li class="dropdown">
+                <a href="projects.html">Projects</a>
                 <ul class="mobileHide">
-                    <li><a href="#project1">Link 1</a></li>
-                    <li><a href="#project2">Link 2</a></li>
-                    <li><a href="#project3">Link 3</a></li>
+                    <li><a href="projects.html#goal1">Goal 1</a></li>
+                    <li><a href="projects.html#goal2">Goal 2</a></li>
+                    <li><a href="projects.html#goal3">Goal 3</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html" class="current">Reflection</a></li>
@@ -73,7 +73,6 @@ Passed VI on iPhone mobile browsers in Safari;
     </div>
 </nav>
 
-    <!--Set it up pretty, then tell your story here!-->
     <main class="main-content">
         <section class="reflection-section">
             <header>
