--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Developed: June 14, 2025
 Tested: July 13, 2025 - Passed validation
 Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
 Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
-Passed VI on iPhone mobile browsers in Safari; 
-    Firefox cut off logotype on left edge; Chrome had too small "Let's Connect" in landscape view.
+Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
+    Each browser's footer font size for email address was disproportionately smaller in landscape view.
 ***************************************************************************************************
 -->
 <!DOCTYPE html>
