--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@ Developed: July 11, 2025
 Tested: July 13, 2025 - Passed validation
 Passed VI on Mac desktop browsers in xx, xx, and xx.
 Passed VI on iPad tablet browsers in xx, xx, and xx.
-Passed VI on iPhone mobile browsers in xx, xx, and xx. 
-Issues:
+Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
+    Each browser's footer font size for email address was disproportionately smaller in landscape view.
 ***************************************************************************************************
 -->
 <!DOCTYPE html>
