--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!--
-***************************************************************************************************
+********************************************************************************************************
 Title: Goals, Projects & Artifacts Page
 Use: Showcase of learning goals and competencies through IS_LT program
 Author: Becky Roesch
@@ -8,11 +8,11 @@ Course: IS_LT 7355 Web Design & Development
 Updated: July 13, 2025
 Developed: July 11, 2025
 Tested: July 13, 2025 - Passed validation
-Passed VI on Mac desktop browsers in xx, xx, and xx.
-Passed VI on iPad tablet browsers in xx, xx, and xx.
+Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome
+Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome
 Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
     Each browser's footer font size for email address was disproportionately smaller in landscape view.
-***************************************************************************************************
+********************************************************************************************************
 -->
 <!DOCTYPE html>
 <html lang="en-US">
