--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                     
                     <div class="artifact-links">
                         <p>🎥 <a href="content/artifact_people-detection.mp4" target="_blank" rel="noopener">Watch Video Tutorial</a></p>
-                        <p>🎨 <a href="https://sites.google.com/view/islt7361-b-roesch/project-4-digital-media-gallery" target="_blank" rel="noopener">View Digital Media Gallery Page</a></p>
+                        <p>🎨 <a href="https://sites.google.com/view/islt7361-b-roesch/project-4-digital-media-gallery" target="_blank" rel="noopener">View Media Gallery Site</a></p>
                     </div>
                 </div>
             </article>
