--- a/index.html
+++ b/index.html
@@ -33,18 +33,14 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
 
-
         <!-- LINK TO CSS FILE -->
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" href="nav.css" type="text/css">
-
-
 </head>
 
 <body>
     <nav>
 <!-- Navigation -->
-    
     <div class="nav-container">
         <!-- Logo -->
         <a href="index.html" class="nav-logo">
@@ -69,7 +65,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 </nav>
