--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                     </ul>
                 </li>
                     <li><a href="reflection.html">Reflection</a></li>
-                    <li><a href="#contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
         </nav>
 
