--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                             </ul>
                     </li>
                     <li><a href="reflection.html">Reflection</a></li>
-                    <li><a href="#contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                  </ul>
              </div>
         </nav>
@@ -170,7 +170,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                     
                     <div class="artifact-links">
                         <p>🎥 <a href="content/artifact_people-detection.mp4" target="_blank" rel="noopener">Watch Video Tutorial</a></p>
-                        <p>🎨 <a href="https://sites.google.com/view/islt7361-b-roesch/project-4-digital-media-gallery" target="_blank" rel="noopener">View Digital Media Gallery Site</a></p>
+                        <p>🎨 <a href="https://sites.google.com/view/islt7361-b-roesch/project-4-digital-media-gallery" target="_blank" rel="noopener">View Media Gallery Site</a></p>
                     </div>
                 </div>
             </article>
