--- a/reflection.html
+++ b/reflection.html
@@ -68,7 +68,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                 </ul>
             </li>
             <li><a href="reflection.html" class="current">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 </nav>
