--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
 Updated: July 16, 2025
 Developed: July 16, 2025
-Tested: July 16, 2025 - in progress
+Tested: July 17, 2025 - in progress
 Passed VI on Mac desktop browsers in xx, xx, and xx.
 Passed VI on iPad tablet browsers in xx, xx, and xx.
 Passed VI on iPhone mobile browsers in xx, xx, and xx.
@@ -59,9 +59,9 @@ Passed VI on iPhone mobile browsers in xx, xx, and xx.
                     <li class="dropdown">
                         <a href="projects.html">Projects</a>
                         <ul class="mobileHide">
-                            <li><a href="#goal1">Goal 1</a></li>
-                            <li><a href="#goal2">Goal 2</a></li>
-                            <li><a href="#goal3">Goal 3</a></li>
+                            <li><a href="projects.html#goal1">Goal 1</a></li>
+                            <li><a href="projects.html#goal2">Goal 2</a></li>
+                            <li><a href="projects.html#goal3">Goal 3</a></li>
                         </ul>
                     </li>
                     <li><a href="reflection.html">Reflection</a></li>
