--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@ Use: Contact form for portfolio inquiries and collaboration opportunities
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 16, 2025
+Updated: July 17, 2025
 Developed: July 16, 2025
-Tested: July 17, 2025 - in progress
-Passed VI on Mac desktop browsers in xx, xx, and xx.
-Passed VI on iPad tablet browsers in xx, xx, and xx.
-Passed VI on iPhone mobile browsers in xx, xx, and xx.
+Tested: July 17, 2025:
+Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
+Passed VI on iPad tablet browsers in Safari, Firefox, and Chrome.
+Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
     Each browser's footer font size for email address was disproportionately smaller in landscape view.
 ********************************************************************************************************
 -->
@@ -77,7 +77,7 @@ Passed VI on iPhone mobile browsers in xx, xx, and xx.
                 <!-- Page Header -->
                 <header class="contact-header">
                     <h1>Let's Connect</h1>
-                    <p class="page-subtitle">I'd love to hear from you about opportunities, collaborations or portfolio feedback!</p>
+                    <p class="page-subtitle">I'd love to hear from you about opportunities, collaborations or portfolio&nbsp;feedback!</p>
                 </header>
 
                 <!-- Contact Form Itself -->
@@ -96,7 +96,7 @@ Passed VI on iPhone mobile browsers in xx, xx, and xx.
 
                          <div class="form-group">
                             <label for="email">Email <span class="required">*</span></label>
-                            <input type="text" id="email" name="email" placeholder="your.email@example.com" required>
+                            <input type="email" id="email" name="email" placeholder="your.email@example.com" required>
                         </div>
 
                             <div class="form-group">
