--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
 
                 <!-- Contact Form Itself -->
                 <div class="contact-form-section">
-                    <form action="mailto:rmr677@umsystem.edu?Subject=Portfolio-Form-ReachOut" method="post" enctype="text/plain" class="contact-form">
+                    <form action="mailto:rmr677@umsystem.edu" method="post" enctype="text/plain" class="contact-form">
                         
                         <div class="form-group">
                             <label for="first-name">First Name <span class="required">*</span></label>
