--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                         </thead>
                         <tbody>
                             <tr>
-                                <td>M.S. Information Science & Learning Techologies</td>
+                                <td>M.S. Information Science & Learning Technologies</td>
                                 <td>University of Missouri, Columbia</td>
                                 <td>Learning Technologies & Design</td>
                                 <td>Fall 2025</td>
