--- a/about.html
+++ b/about.html
@@ -72,6 +72,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                     <li><a href="reflection.html">Reflection</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+            </div>
         </nav>
 
         <main class="about-main">
