--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
         <!-- LINK TO CSS FILE -->
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" href="nav.css" type="text/css">
+
+        <meta name="google-site-verification" content="Q6yMJ64Bthbuo07e63kiwq3h7JGnurdKnRgEramhcps" />
 </head>
 
 <body>
