--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ Use: Showcase of learning goals and competencies through IS_LT program
 Author: Becky Roesch
 School/Term: University of Missouri, Summer 2025
 Course: IS_LT 7355 Web Design & Development
-Updated: July 16, 2025
+Updated: July 22, 2025
 Developed: July 11, 2025
 Tested: July 17, 2025 - Passed validation
 Passed VI on Mac desktop browsers in Safari, Firefox, and Chrome.
@@ -162,7 +162,7 @@ Passed VI on iPhone mobile browsers in Safari, Firefox, and Chrome.
                     
                     <!-- Embedded Video Player -->
                     <div class="video-player">
-                        <video controls preload="none" title="Setting Up & Using Magnifier & People Detection on the iPhone 12 Pro Max or 12 Pro">
+                            <video controls preload="none" poster="content/people_detection_poster.jpg" title="Setting Up & Using Magnifier & People Detection on the iPhone 12 Pro Max or 12 Pro">
                             <source src="content/artifact_people-detection.mp4" type="video/mp4">
                             Your browser does not support the video element.
                         </video>
